cmake_minimum_required(VERSION 3.15)
project(Learning_From_Primer_Plus)

set(CMAKE_CXX_STANDARD 14)

add_executable(Learning_From_Primer_Plus main.cpp)
add_executable(T1 T1.cpp)
#add_executable(main main.cpp)
add_executable(T Chapter_3/T.cpp)
add_executable(divide Chapter_3/divide.cpp)
add_executable(modulus Chapter_3/modulus.cpp)
add_executable(init Chapter_3/init.cpp)
add_executable(typecast Chapter_3/typecast.cpp)
add_executable(Opp Chapter_3/Opp.cpp)
add_executable(calling Chapter_7/calling.cpp)
add_executable(protos Chapter_7/protos.cpp)
add_executable(twoarg Chapter_7/twoarg.cpp)
add_executable(lotto Chapter_7/lotto.cpp)
add_executable(arrfun1 Chapter_7/arrfun1.cpp)
add_executable(arrfun2 Chapter_7/arrfun2.cpp)
add_executable(arrfun3 Chapter_7/arrfun3.cpp)
add_executable(arrfun4 Chapter_7/arrfun4.cpp)
add_executable(travel Chapter_7/travel.cpp)
add_executable(strctptr Chapter_7/strctptr.cpp)
add_executable(arrobj Chapter_7/arrobj.cpp)
add_executable(inline Chapter_8/inline.cpp)
add_executable(firstref Chapter_8/firstref.cpp)
add_executable(secref Chapter_8/secref.cpp)
add_executable(swaps Chapter_8/swaps.cpp)