cmake_minimum_required(VERSION 3.15)
project(Learning_From_Primer_Plus)

set(CMAKE_CXX_STANDARD 14)

add_executable(Learning_From_Primer_Plus main.cpp)
add_executable(T1 T1.cpp)
#add_executable(main main.cpp)
add_executable(T Chapter_3/T.cpp)
add_executable(divide Chapter_3/divide.cpp)
add_executable(modulus Chapter_3/modulus.cpp)
add_executable(init Chapter_3/init.cpp)
add_executable(typecast Chapter_3/typecast.cpp)
add_executable(Opp Chapter_3/Opp.cpp)
add_executable(calling Chapter_7/calling.cpp)
add_executable(protos Chapter_7/protos.cpp)
add_executable(twoarg Chapter_7/twoarg.cpp)
add_executable(lotto Chapter_7/lotto.cpp)
add_executable(arrfun1 Chapter_7/arrfun1.cpp)
add_executable(arrfun2 Chapter_7/arrfun2.cpp)
add_executable(arrfun3 Chapter_7/arrfun3.cpp)
add_executable(arrfun4 Chapter_7/arrfun4.cpp)
add_executable(travel Chapter_7/travel.cpp)
add_executable(strctptr Chapter_7/strctptr.cpp)
add_executable(arrobj Chapter_7/arrobj.cpp)
add_executable(inline Chapter_8/inline.cpp)
add_executable(firstref Chapter_8/firstref.cpp)
add_executable(secref Chapter_8/secref.cpp)
add_executable(swaps Chapter_8/swaps.cpp)
add_executable(cubes Chapter_8/cubes.cpp)
add_executable(strc_ref Chapter_8/strc_ref.cpp)
add_executable(strquote Chapter_8/strquote.cpp)
add_executable(left Chapter_8/left.cpp)
add_executable(funtemp Chapter_8/funtemp.cpp)
add_executable(twotemps Chapter_8/twotemps.cpp)
add_executable(twoswap Chapter_8/twoswap.cpp)
add_executable(usestok1 Chapter_10/Destructors/usestok1.cpp Chapter_10/Destructors/Test.cpp)
#add_executable(stock10 Chapter_10/Destructors/stock10.cpp)
#file(GLOB_RECURSE SOURCES /*.cpp) #*/

add_executable(file1 Chapter_9/9.1/file1.cpp Chapter_9/9.1/file2.cpp)
add_executable(autoscp Chapter_9/9.2/9.2.2/autoscp.cpp)
add_executable(external Chapter_9/9.2/9.2.3/external.cpp Chapter_9/9.2/9.2.3/support.cpp)
add_executable(newplace Chapter_9/9.2/9.2.10/newplace.cpp)